--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,19 @@
-.card {
+#card {
     /* background-color: darkgray; */
     text-align: center;
-    width: 18rem;
+    width: 25rem;
     height: 10rem;
-    margin-left: 500px;
+    margin-left: 450px;
+    margin-bottom: 50px;
     
+}
+
+#questions {
+    text-align: center;
+    width: 25rem;
+    height: 10rem;
+    margin-left: 450px;  
+    margin-bottom: 50px;
 }
 
 header {
